--- a/src/features/orders/NewOrderForm/index.scss
+++ b/src/features/orders/NewOrderForm/index.scss
@@ -1,4 +1,4 @@
-.user-edit-page {
+.order-new-page {
   background: #eae8e8;
   border-radius: 15px;
   display: flex;
@@ -94,37 +94,39 @@ form {
     flex-direction: column;
     gap: 20px;
 
+    label {
+      margin-right: 10px;
+    }
+
+    select {
+      max-width: 300px;
+      padding: 0.2em;
+      font-size: 1em;
+      color: var(--header-color);
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+
+    select::-ms-expand {
+      display: none;
+    }
+
+    select::-webkit-scrollbar {
+      display: none;
+    }
+
+    select:focus {
+      border-color: var(--header-color);
+      outline: none;
+    }
+  }
+  .time-box {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.3;
+
     div {
       display: flex;
-      align-items: center;
-      gap: 20px;
-
-      label {
-        margin-right: 10px;
-      }
-
-      select {
-        max-width: 300px;
-        padding: 0.5em 0.7em;
-        font-size: 1em;
-        color: var(--header-color);
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        appearance: none;
-      }
-
-      select::-ms-expand {
-        display: none;
-      }
-
-      select::-webkit-scrollbar {
-        display: none;
-      }
-
-      select:focus {
-        border-color: var(--header-color);
-        outline: none;
-      }
     }
 
   }
