--- a/src/features/orders/OrdersList/index.scss
+++ b/src/features/orders/OrdersList/index.scss
@@ -10,10 +10,28 @@
   gap: 20px;
 
   .header-box {
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+
     h1 {
       font-size: 1.3rem;
       font-weight: 700;
       color: var(--header-color);
+    }
+
+    button {
+      position: absolute;
+      top: -0;
+      right: 0;
+      outline: none;
+      border: none;
+      cursor: pointer;
+      font-size: 1.5rem;
+      background: transparent;
+
     }
   }
 
