--- a/src/features/users/User/index.scss
+++ b/src/features/users/User/index.scss
@@ -14,7 +14,11 @@
     justify-content: center;
     border-radius: 15px;
 
-    .person-name {
+    .person-name
+    .person-img,
+    .rating,
+    .phone-number{
+      width: 120px;
       display: flex;
       align-items: center;
       justify-content: center;
