--- a/src/components/Pages/MainPage/index.scss
+++ b/src/components/Pages/MainPage/index.scss
@@ -13,8 +13,8 @@
       font-size: 1.3rem;
       font-weight: 700;
       color: var(--header-color);
+    }
   }
-}
 
   .statistic {
     width: 100%;
@@ -39,51 +39,20 @@
         gap: 10px;
         color: var(--header-color);
         text-align: center;
-    }
+      }
 
       .icon-stat-tab {
         font-size: 1.4rem;
         color: #929191;
-    }
-  }
-
-    .top-barber-per-month {
-
-      .barber-rating {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-
-        .barber-box {
-          display: flex;
-          gap: 10px;
-          align-items: center;
-          justify-content: center;
-
-          img {
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-        }
-      }
-
-        .rating {
-          display: flex;
-          gap: 5px;
-
-          .icon-rating {
-            color: #f4f309;
-        }
       }
     }
-  }
 
-    .orders-count, .reviews-count, .all-clients {
+    .orders-count, .stuff-count, .reviews-count, .all-clients {
 
       span {
         font-size: 2rem;
         font-weight: 500;
+      }
     }
   }
-}
 }
