--- a/server/views/404.html
+++ b/server/views/404.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-<h1>Sorry!</h1>
-<p>The resource you have requested does not exist.</p>
+<h1>Sorry</h1>
+<p>Resource does not exist.</p>
 </body>
 
 </html>
