--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -29,3 +29,17 @@ a {
   appearance: none;
 }
 
+.error {
+  color:  red;
+  background: #eae8e8;
+  border-radius: 15px;
+  display: flex;
+  margin-top: 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 25px;
+  gap: 20px;
+  font-size: 24px;
+  font-weight: bold;
+}
